2008-07-11  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectParserService.cs: changed
	  parser serivce thread safety.

2008-07-10  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Output/NetAmbience.cs,
	  MonoDevelop.Projects.Dom/ResolveResult.cs,
	  MonoDevelop.Projects.Dom/DomType.cs,
	  MonoDevelop.Projects.Dom/DomTypeProxy.cs,
	  MonoDevelop.Projects.Dom/ExpressionContext.cs,
	  MonoDevelop.Projects.Dom/DomPersistence.cs,
	  MonoDevelop.Projects.Parser/DefaultParserService.cs: Worked on code
	  completion.

2008-07-10  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Projects.Dom/ExpressionContext.cs,
	  MonoDevelop.Projects.Dom/ExpressionResult.cs: Worked on code
	  completion.

2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs,
	  MonoDevelop.Projects.Extensions/ProjectExtensionUtil.cs,
	  MonoDevelop.Projects.Extensions/ISolutionItemHandler.cs: Added
	  support for path encoding/decoding specific to the file format.

2008-07-09  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/ResolveResult.cs,
	  MonoDevelop.Projects.Dom/DomReturnType.cs: Worked on new dom.

2008-07-09  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/CompoundType.cs: Worked on dom.

2008-07-09  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Projects.Dom.Output/Ambience.cs,
	  MonoDevelop.Projects.Dom.Output/NetAmbience.cs,
	  MonoDevelop.Projects.Dom/ResolveResult.cs,
	  MonoDevelop.Projects.Dom/DomType.cs,
	  MonoDevelop.Projects.Dom/IType.cs: Worked on method completion.

2008-07-08  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectParserService.cs,
	  MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Projects.Dom/ResolveResult.cs,
	  MonoDevelop.Projects.Dom/DomType.cs,